modify class by grade
