# build/classes/java/main/META-INF/swagger/micronaut-guides-1.0.yml
@@ -3,6 +3,24 @@ info:
   title: micronaut-guides
   version: "1.0"
 paths:
+  /Notification/create:
+    post:
+      tags:
+      - Notification
+      operationId: createNotification
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Notification"
+        required: true
+      responses:
+        "200":
+          description: createNotification 200 response
+          content:
+            application/json:
+              schema:
+                type: string
   /class/save:
     post:
       tags:
@@ -141,7 +159,7 @@ components:
           items:
             $ref: "#/components/schemas/Notification"
         stadistic:
-          $ref: "#/components/schemas/stadistic"
+          $ref: "#/components/schemas/Statistic"
     Notification:
       type: object
       properties:
@@ -151,6 +169,14 @@ components:
         name:
           type: string
     Role:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+    Statistic:
       type: object
       properties:
         id:
@@ -178,11 +204,3 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/Class"
-    stadistic:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-        name:
-          type: string
